// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`html tagged template > should bind click event 1`] = `
<DocumentFragment>
  <div>
    hello 2
  </div>
</DocumentFragment>
`;

exports[`html tagged template > should compose html 1`] = `
{
  "elements": {},
  "events": {
    "e0": [MockFunction],
  },
  "html": "<div onclick="e0"> hello 2 </div>",
}
`;

exports[`html tagged template > should compose html 2`] = `
{
  "elements": {},
  "events": {
    "e0": [MockFunction],
    "e1": [MockFunction],
  },
  "html": "<div onclick="e0" dbclick="e1" > hello 2 </div>",
}
`;

exports[`html tagged template > should respect Array 1`] = `
<DocumentFragment>
  <div>
    
      
    <button>
      b1
    </button>
    <button>
      b2
    </button>
    
      
    <!-- test -->
    
    
  </div>
</DocumentFragment>
`;

exports[`html tagged template > should respect HTMLElement 1`] = `
<DocumentFragment>
  <div>
    <button>
      b1
    </button>
  </div>
</DocumentFragment>
`;
